fix: placeholder for images has wrong background padding

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -62,6 +62,11 @@ main {
   font-weight: 700;
 }
 
+.people-placeholder {
+  background-clip: content-box;
+  -webkit-background-clip: content-box;
+}
+
 
 .people-grid {
   display: grid;
